gaps between images fixed

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -196,6 +196,11 @@ main {
     opacity: 1;
 }
 
+.images {
+    display: flex;
+    flex-direction: column;
+}
+
 .big-image {
     position: fixed;
     top: 0;
